tests/EtaX/EtaX.boom/EtaX.boom.00.check
// 2.13-base exitCode: 1   new A().boom // ?/?/err: apply, ()-insertion
/d/shisa/target/tests/EtaX/EtaX.boom/EtaX.boom/EtaX.boom.00.scala:4: error: trait A is abstract; cannot be instantiated
  new A().boom // ?/?/err: apply, ()-insertion
  ^
one error found
// 2.13-head exitCode: 1   new A().boom // ?/?/err: apply, ()-insertion
/d/shisa/target/tests/EtaX/EtaX.boom/EtaX.boom/EtaX.boom.00.scala:4: error: trait A is abstract; cannot be instantiated
  new A().boom // ?/?/err: apply, ()-insertion
  ^
1 error
// 2.13-new exitCode: 1   new A().boom // ?/?/err: apply, ()-insertion
/d/shisa/target/tests/EtaX/EtaX.boom/EtaX.boom/EtaX.boom.00.scala:4: error: trait A is abstract; cannot be instantiated
  new A().boom // ?/?/err: apply, ()-insertion
  ^
1 error
// 3.0-old exitCode: 1   new A().boom // ?/?/err: apply, ()-insertion
-- [E100] Syntax Migration Warning: /d/shisa/target/tests/EtaX/EtaX.boom/EtaX.boom/EtaX.boom.00.scala:4:10 
4 |  new A().boom // ?/?/err: apply, ()-insertion
  |  ^^^^^^^^^^^^
  |  method boom must be called with () argument

Explanation
===========
Previously an empty argument list () was implicitly inserted when calling a nullary method without arguments. E.g.

def next(): T = ...
          |next     // is expanded to next()

In Dotty, this idiom is an error. The application syntax has to follow exactly the parameter syntax.
Excluded from this rule are methods that are defined in Java or that override methods defined in Java.

-- [E042] Usage Error: /d/shisa/target/tests/EtaX/EtaX.boom/EtaX.boom/EtaX.boom.00.scala:4:6 
4 |  new A().boom // ?/?/err: apply, ()-insertion
  |      ^
  |      A is a trait; it cannot be instantiated

Explanation
===========
Abstract classes and traits need to be extended by a concrete class or object
to make their functionality accessible.

You may want to create an anonymous class extending A with
  class A { }

or add a companion object with
  object A extends A

You need to implement any abstract members in both cases.


1 warning found
1 error found
// 3.0 exitCode: 1   new A().boom // ?/?/err: apply, ()-insertion
-- [E100] Syntax Error: /d/shisa/target/tests/EtaX/EtaX.boom/EtaX.boom/EtaX.boom.00.scala:4:10 
4 |  new A().boom // ?/?/err: apply, ()-insertion
  |  ^^^^^^^^^^^^
  |  method boom must be called with () argument

Explanation
===========
Previously an empty argument list () was implicitly inserted when calling a nullary method without arguments. E.g.

def next(): T = ...
          |next     // is expanded to next()

In Dotty, this idiom is an error. The application syntax has to follow exactly the parameter syntax.
Excluded from this rule are methods that are defined in Java or that override methods defined in Java.

1 error found
// 3.1 exitCode: 1   new A().boom // ?/?/err: apply, ()-insertion
-- [E100] Syntax Error: /d/shisa/target/tests/EtaX/EtaX.boom/EtaX.boom/EtaX.boom.00.scala:4:10 
4 |  new A().boom // ?/?/err: apply, ()-insertion
  |  ^^^^^^^^^^^^
  |  method boom must be called with () argument

Explanation
===========
Previously an empty argument list () was implicitly inserted when calling a nullary method without arguments. E.g.

def next(): T = ...
          |next     // is expanded to next()

In Dotty, this idiom is an error. The application syntax has to follow exactly the parameter syntax.
Excluded from this rule are methods that are defined in Java or that override methods defined in Java.

1 error found
